--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -27,11 +27,27 @@
   }
 }
 .main{
+  .mobile-view{
+    display: none;
+    @media (max-width: 1000px) {
+      display: block;
+    }
+  }
+  .mobile{
+    @media (max-width: 1000px) {
+      display: none;
+    }
+  }
   padding: 20px 40px;
   background-color: $Background;
   display: grid;
   grid-template-columns: 1fr 2fr ;
   grid-gap: 30px;
+  @media(max-width: 1000px){
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
   &__sales{
     &__box{
       text-align: center;
@@ -77,7 +93,6 @@
       padding: 5px;
       p{
         width: 190px;
-        // background-color: $Gris-claro;
         border-radius: 20px;
         color: $Azul;
         @include fonts( $fontMain, 14 , 400);
@@ -85,12 +100,18 @@
         text-align: center;
         cursor: pointer;
         transition: all 0.5;
+        @media(max-width: 1000px){
+          font-size: 13px;
+          width: 150px;
+          padding: 10px;
+        }
       }
     }
     &-filter{
       display: flex;
       justify-content: flex-end;
-      >div{
+      position: relative;
+      .filtrar{
         display: flex;
         align-items: center;
         justify-content: flex-end;
@@ -105,12 +126,68 @@
           @include fonts( $fontMain, 14 , 400);       
         }
       }
+      #filtrar{
+        position: absolute;
+        width: 300px;
+        height: 300px;
+        display: none;
+        top: 0%;
+        background: white;
+        z-index: 2;
+        color: $Azul;
+        padding: 20px;
+        border-radius: 10px;
+        #cerrar-filtro{
+          color: $Rojo;
+        }
+        label{
+          @include fonts( $fontMain, 14 , 700);
+          color: $Azul;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          cursor: pointer;
+          &::before{
+            content: "";
+            display: inline-block;
+            width: 20px;
+            height:  20px;
+            border: 1px solid $Gris-oscuro;
+            margin-right: 10px;
+          }
+        }
+        input[type="radio"]{
+          visibility: hidden;
+          position: absolute;
+          &:checked + label::before {
+            content: "✔";
+            font-size: 20px;
+            line-height: 20px;
+          }
+        }
+        
+        >div{
+          display: flex;
+          border-radius: 10px;
+          background-color: white;
+          text-align: center;
+          justify-content: center;
+          align-items: center;
+          p{
+            @include fonts( $fontMain, 14 , 300);
+            margin-right: 20px;
+          }
+        }
+      }
       }
   }
   &__table{
     display: grid;
     grid-column: 1/3;
     grid-template-columns: repeat(4 , 1fr);
+    @media(max-width: 1000px){
+      grid-template-columns: repeat(2 , 1fr) 20px;
+    }
     .row{
       &__title{
         background: $Gradient;
@@ -130,6 +207,9 @@
         padding: 10px 20px;
         background-color: white;
         grid-column: 1/5;
+        @media(max-width: 1000px){
+          grid-template-columns: repeat(2 , 1fr) 20px;
+        }
         p{
           color: $Gris-oscuro;
           @include fonts( $fontMain, 16 , 500);
@@ -153,6 +233,9 @@
           font-family: $fontMain;
           color: $Gris-claro;
           border-radius: 0 0 10px 10px;
+          @media(max-width: 1000px){
+            grid-template-columns: repeat(2 , 1fr) 30px;
+          }
           &::after{
             content: "";
             position: absolute;
@@ -172,6 +255,10 @@
             }
           }
           #amount{
+            @media(max-width: 1000px){
+              grid-column: 2/3;
+              grid-row: 1/2;
+            }
             p{
               margin-bottom: 10px;
               &:first-child{
@@ -186,6 +273,10 @@
             }
           }
         }
+        .fa-plus{
+          color: $Azul;
+          grid-column: 3/4;
+        }
         .succes{
           &::after{
             background: $Rojo;
@@ -193,6 +284,60 @@
         }
       }
     }
+  }
+  .PopUp-mobile{
+    position: relative;
+    #cerrar-pupUp{
+      color: $Rojo;
+      position: absolute;
+      left: 90%;
+      transform: translate(-90%);
+    }
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.178);
+    padding: 20px;
+    &-container{
+      display: flex;
+      background-color: white;
+      padding: 20px;
+      border-radius: 20px;
+      p{
+        color: $Azul;
+      }
+      #amount{
+        p{
+          margin-bottom: 5px;
+          &:first-child{
+            color: $Azul;
+          }
+          &:nth-child(2){
+            color: $Gris-claro;
+            font-size: 12px;
+          }
+          &:last-child{
+            color: $Rojo;
+            margin-bottom: 0;
+          } 
+        }
+      }
+      > div{
+        min-height: 400px;
+        max-height: 50vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: white;
+        padding: 20px;
+    }
+    }
+
   }
 }
 
