navbar and responsive ready

--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -304,6 +304,7 @@
     background-color: rgba(0, 0, 0, 0.178);
     padding: 20px;
     &-container{
+      position: relative;
       display: flex;
       background-color: white;
       padding: 20px;
