--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,18 +1,117 @@
+@mixin animationNavbar(){
+  ul{
+    position: relative;
+    width: 50px;  
+    height: 50px;
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 3;
+    @media(min-width: 1000px){
+      display: none;
+    }
+  }
+  ul li{
+      list-style: none;
+      position: absolute;
+      transform: translateY(-50%);
+      width: 70%;  height: 5px;
+      background: $Azul;
+      transition: 1s;
+  }
+  ul li:nth-of-type(1){
+      top: 30%;  
+      left: 15%; 
+      transition-delay: 1s; 
+      opacity: 1; 
+  }
+  ul li:nth-of-type(2){
+      top: 50%;  
+      left: 15%; 
+      transition-delay: 0s;   
+  }
+  ul li:nth-of-type(3){
+      top: 70%;  
+      right: 15%;
+      transition-delay: 1s; 
+      opacity: 1; 
+  }
+  ul.active li:nth-of-type(1){
+      left: 100%;
+      transition-delay: 0s;
+      opacity: 0; 
+  }
+  ul.active li:nth-of-type(2){
+      transform: translateY(-50%) rotate(405deg);
+      transition-delay: .5s;
+      background-color: $Rojo;
+  }
+  ul.active li:nth-of-type(3){
+      right: 100%;
+      transition-delay: 0s;
+      opacity: 0; 
+  }
+
+  ul li:nth-of-type(2)::before{
+    content: '';
+    position: absolute;
+    top: -150px;  left: 0;
+    width: 100%;  height: 100%;
+    background: $Rojo;
+    transform: rotate(90deg);
+    transition: 1s;
+    transition-delay: .5s;
+}
+  ul.active li:nth-of-type(2)::before{
+    top: 0; 
+    transition-delay: 1s;
+  }
+}
+
 .header{
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 40px;
   background: $Gradient;
+  position: relative;
+  @include animationNavbar();
   &__link{
+
     a{
       margin-right: 20px;
       color: white;
       text-decoration: none;
       font-family: $fontMain;
+      @media(max-width:1000px){
+        display: none;
+      }
       &:hover{
         text-decoration: underline;
       }
     }
+    
   }
+  .active-box{
+    @media(max-width:1000px){
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background: $Gradient;
+      a{
+        display: block;
+        margin-bottom: 30px;
+        &:last-child{
+          margin-bottom: none;
+        }
+      }
+    }
+  }
+
 }
